update:新增自定义种类、调整自定义组件

--- a/projects/angular/form/form.component.html
+++ b/projects/angular/form/form.component.html
@@ -197,7 +197,7 @@
       </ng-container>
       <ng-container *ngSwitchCase="'manual'">
         <ng-template
-          [cdkPortalOutlet]="wpx.scopes.get(field.option!.scope!)"
+          [cdkPortalOutlet]="wpx.components.get(field.option!.component!)"
           (attached)="setInput($event, field)"
         ></ng-template>
       </ng-container>
