--- a/projects/integrate/admin/application/factory/schema/schema.component.html
+++ b/projects/integrate/admin/application/factory/schema/schema.component.html
@@ -60,8 +60,8 @@
           <ng-container *ngIf="data.option?.multiple">
             <nz-tag>多选</nz-tag>
           </ng-container>
-          <ng-container *ngIf="data.option?.scope">
-            <nz-tag>作用域:{{ data.option?.scope }}</nz-tag>
+          <ng-container *ngIf="data.option?.component">
+            <nz-tag>组件:{{ data.option?.component }}</nz-tag>
           </ng-container>
         </td>
         <td nzRight nzAlign="center">
