update:完善自定义种类

--- a/projects/integrate/admin/application/factory/home/home.component.html
+++ b/projects/integrate/admin/application/factory/home/home.component.html
@@ -9,8 +9,8 @@
         <ul style="list-style: none">
           <li> <i nz-icon nzType="database" nzTheme="twotone"></i>【数据集】创建数据集合，生成表格、表单等； </li>
           <li>
-            <i nz-icon nzType="calculator" nzTheme="twotone"></i>
-            【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；
+            <i nz-icon nzType="calculator" nzTheme="twotone"> </i
+            >【数据聚合】引用数据集合，生成数据汇总与趋势分析的表格、统计图等；
           </li>
           <li><i nz-icon nzType="code" nzTheme="twotone"></i>【自定义】通过编程自定义的页面；</li>
           <li><i nz-icon nzType="folder" nzTheme="twotone"></i>【导航分组】导航中的分组，只做显示；</li>
