--- a/projects/integrate/admin/application/factory/pages/pages.component.html
+++ b/projects/integrate/admin/application/factory/pages/pages.component.html
@@ -79,6 +79,7 @@
           </ng-container>
           ]
         </ng-container>
+        <ng-container *ngIf="page.manual"> [{{ page.manual.scope }}] </ng-container>
       </span>
     </span>
   </ng-template>
