--- a/projects/angular/form/form.component.html
+++ b/projects/angular/form/form.component.html
@@ -196,10 +196,9 @@
         </nz-form-item>
       </ng-container>
       <ng-container *ngSwitchCase="'manual'">
-        <ng-template
-          [cdkPortalOutlet]="wpx.components.get(field.option!.component!)"
-          (attached)="setInput($event, field)"
-        ></ng-template>
+        <ng-container *ngIf="wpx.components.get(field.option!.component!) as option">
+          <ng-template [cdkPortalOutlet]="option.component" (attached)="setInput($event, field)"></ng-template>
+        </ng-container>
       </ng-container>
     </ng-container>
   </ng-container>
