--- a/projects/angular/richtext/richtext.component.scss
+++ b/projects/angular/richtext/richtext.component.scss
@@ -1,6 +1,11 @@
 .cdx-header {
-  border: 1px solid #f0f0f0;
+  border: 1px solid #d9d9d9;
   border-radius: 2px;
+
+  &:hover,
+  &:active {
+    border-color: #40a9ff;
+  }
 }
 
 .cdx-media {
