--- a/projects/integrate/admin/application/functions/cloud/cos/cos.component.html
+++ b/projects/integrate/admin/application/functions/cloud/cos/cos.component.html
@@ -1,4 +1,4 @@
-<form *ngIf="form" nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
+<form nz-form nzLayout="vertical" id="form" [formGroup]="form" (wpxSubmit)="submit($event)">
   <nz-form-item>
     <nz-form-label nzRequired>存储桶名称</nz-form-label>
     <nz-form-control
@@ -35,7 +35,13 @@
         }
       }"
     >
-      <input nz-input formControlName="tencent_cos_expired" placeholder="例如：300s" />
+      <nz-input-number
+        style="width: 100%"
+        formControlName="tencent_cos_expired"
+        [nzFormatter]="formatterSec"
+        [nzMin]="0"
+        [nzStep]="1"
+      ></nz-input-number>
     </nz-form-control>
   </nz-form-item>
   <nz-form-item>
