--- a/projects/integrate/admin/application/functions/office/office.component.html
+++ b/projects/integrate/admin/application/functions/office/office.component.html
@@ -4,30 +4,70 @@
       <nz-list-item>
         <nz-list-item-meta>
           <nz-list-item-meta-avatar>
-            <nz-avatar
-              nzShape="square"
-              nzSize="large"
-              [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
-            ></nz-avatar>
+            <ng-container [ngSwitch]="data['office_platform']">
+              <ng-container *ngSwitchCase="'feishu'">
+                <nz-avatar
+                  nzShape="square"
+                  nzSize="large"
+                  [nzSrc]="['assets', 'office', 'feishu.png'] | wpxAssets"
+                ></nz-avatar>
+              </ng-container>
+              <ng-container *ngSwitchCase="'dingtalk'">
+                <nz-avatar
+                  nzShape="square"
+                  nzSize="large"
+                  [nzSrc]="['assets', 'office', 'dingtalk.png'] | wpxAssets"
+                ></nz-avatar>
+              </ng-container>
+              <ng-container *ngSwitchCase="'work-weixin'">
+                <nz-avatar
+                  nzShape="square"
+                  nzSize="large"
+                  [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
+                ></nz-avatar>
+              </ng-container>
+              <ng-container *ngSwitchDefault>
+                <nz-avatar nzShape="square" nzSize="large" nzIcon="question"></nz-avatar>
+              </ng-container>
+            </ng-container>
           </nz-list-item-meta-avatar>
-          <nz-list-item-meta-title><b>飞书</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description *ngIf="!(platform && platform === 'feishu')">
-            当前未关联飞书
-          </nz-list-item-meta-description>
+          <nz-list-item-meta-title>
+            <b [ngSwitch]="data['office_platform']">
+              <ng-container *ngSwitchCase="'feishu'">飞书</ng-container>
+              <ng-container *ngSwitchCase="'dingtalk'">钉钉</ng-container>
+              <ng-container *ngSwitchCase="'work-weixin'">企业微信</ng-container>
+              <ng-container *ngSwitchDefault>当前未关联第三方平台</ng-container>
+            </b>
+          </nz-list-item-meta-title>
         </nz-list-item-meta>
-        <nz-descriptions *ngIf="platform && platform === 'feishu'" nzSize="small" nzBordered [nzColumn]="2">
-          <nz-descriptions-item nzTitle="应用 ID">{{ data['feishu_app_id'] }}</nz-descriptions-item>
-          <nz-descriptions-item nzTitle="应用密钥">{{ data['feishu_app_secret'] }}</nz-descriptions-item>
+
+        <nz-descriptions
+          *ngIf="!!data['office_platform']"
+          style="width: 800px"
+          nzSize="small"
+          nzBordered
+          nzLayout="vertical"
+          [nzColumn]="2"
+        >
+          <nz-descriptions-item nzTitle="应用 ID">
+            <ng-container *ngIf="data['feishu_app_id']; else unkown">
+              {{ data['feishu_app_id'] }}
+            </ng-container>
+          </nz-descriptions-item>
+          <nz-descriptions-item nzTitle="应用密钥">
+            <ng-container *ngIf="data['feishu_app_secret']; else unkown"> 已设置 </ng-container>
+          </nz-descriptions-item>
           <nz-descriptions-item nzTitle="事件订阅安全校验数据密钥">
-            {{ data['feishu_encrypt_key'] }}
+            <ng-container *ngIf="data['feishu_encrypt_key']; else unkown"> 已设置 </ng-container>
           </nz-descriptions-item>
           <nz-descriptions-item nzTitle="事件订阅验证令牌">
-            {{ data['feishu_verification_token'] }}
+            <ng-container *ngIf="data['feishu_verification_token']; else unkown"> 已设置 </ng-container>
           </nz-descriptions-item>
         </nz-descriptions>
+
         <nz-list-item-extra>
-          <button nz-button nzType="link" (click)="linkFeishu()">设置</button>
-          <ng-container *ngIf="platform && platform === 'feishu'">
+          <button nz-button nzType="link" (click)="setPlatform()">设置</button>
+          <ng-container *ngIf="!!data['office_platform']">
             <button
               nz-button
               nzType="link"
@@ -35,57 +75,29 @@
               nz-popconfirm
               nzPopconfirmTitle="您确定要取消该关联吗？"
               nzPopconfirmPlacement="bottom"
-              (nzOnConfirm)="unlinkFeishu()"
+              (nzOnConfirm)="unset()"
             >
               取消关联
             </button>
           </ng-container>
         </nz-list-item-extra>
       </nz-list-item>
-      <nz-list-item>
-        <nz-list-item-meta>
-          <nz-list-item-meta-avatar>
-            <nz-avatar
-              nzShape="square"
-              nzSize="large"
-              [nzSrc]="['assets', 'office', 'work-weixin.png'] | wpxAssets"
-            ></nz-avatar>
-          </nz-list-item-meta-avatar>
-          <nz-list-item-meta-title><b>企业微信</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description>当前未关联企业微信</nz-list-item-meta-description>
-        </nz-list-item-meta>
-        <nz-list-item-extra>
-          <button nz-button nzType="link" disabled> 关联 </button>
-        </nz-list-item-extra>
-      </nz-list-item>
-      <nz-list-item>
-        <nz-list-item-meta>
-          <nz-list-item-meta-avatar>
-            <nz-avatar
-              nzShape="square"
-              nzSize="large"
-              [nzSrc]="['assets', 'office', 'dingtalk.png'] | wpxAssets"
-            ></nz-avatar>
-          </nz-list-item-meta-avatar>
-          <nz-list-item-meta-title><b>钉钉</b></nz-list-item-meta-title>
-          <nz-list-item-meta-description>当前未关联钉钉</nz-list-item-meta-description>
-        </nz-list-item-meta>
-        <nz-list-item-extra>
-          <button nz-button nzType="link" disabled> 关联 </button>
-        </nz-list-item-extra>
-      </nz-list-item>
     </nz-list>
   </nz-list>
 
   <nz-card nzTitle="以下设置需要关联一种企业平台作为支持，切换企业平台原设置将失效">
-    <nz-list *ngIf="platform && platform === 'feishu'" nzSize="large" nzItemLayout="vertical">
+    <nz-list nzSize="large" nzItemLayout="vertical">
       <nz-list-item>
         <nz-list-item-meta>
           <nz-list-item-meta-title><b>第三方免登陆</b></nz-list-item-meta-title>
           <nz-list-item-meta-description> 允许通过企业平台用户身份进行登录 </nz-list-item-meta-description>
         </nz-list-item-meta>
-        <nz-descriptions *ngIf="platform && platform === 'feishu'" nzSize="small" nzBordered [nzColumn]="2">
-          <nz-descriptions-item nzTitle="免登授权码跳转地址">{{ data['redirect_url'] }}</nz-descriptions-item>
+        <nz-descriptions style="width: 800px" nzSize="small" nzBordered nzLayout="vertical" [nzColumn]="2">
+          <nz-descriptions-item nzTitle="免登授权码跳转地址">
+            <ng-container *ngIf="data['redirect_url']; else unkown">
+              {{ data['redirect_url'] }}
+            </ng-container>
+          </nz-descriptions-item>
         </nz-descriptions>
         <nz-list-item-extra>
           <button nz-button nzType="primary" nzShape="circle" nz-tooltip="设置" (click)="setRedirect()">
@@ -120,3 +132,5 @@
     </nz-list>
   </nz-card>
 </wpx-admin-functions-tabs>
+
+<ng-template #unkown>未设置</ng-template>
